made image responsive, added title

--- a/details.html
+++ b/details.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Change later</title>
+    <title id="title-details">CelebBattles - details</title>
     <link rel="icon" type="image/png" href="tournaments/favicon.png" />
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class=" row">
                     <div class="col-sm">
-                        <img id="celeb-img" class="img-fluid" width="60%" style="margin: auto; display: block; border-radius: 2%;">
+                        <img id="celeb-img" class="img-fluid details-image" alt="Image not found" width="60%" style="margin: auto; display: block; border-radius: 2%;">
                     </div>
                     <div class="col-sm">
                         <table class="table-responsive info-table">
