add rank banner

--- a/details.html
+++ b/details.html
@@ -73,7 +73,14 @@
             <div class="container">
                 <div class=" row">
                     <div class="col-sm">
-                        <img id="celeb-img" class="img-fluid details-image" alt="Image not found" width="60%" style="margin: auto; display: block; border-radius: 2%;">
+                        <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;">
+                        <div style="text-align: center;">
+                            <br>
+                            <br>
+                            <h4 class="rank-h4" id="rank-banner"></h4>
+                            <br>
+                            <br>
+                        </div>
                     </div>
                     <div class="col-sm">
                         <table class="table-responsive info-table">
