fancy rank banner

--- a/details.html
+++ b/details.html
@@ -28,6 +28,8 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -77,7 +79,7 @@
                         <div style="text-align: center;">
                             <br>
                             <br>
-                            <h4 class="rank-h4" id="rank-banner"></h4>
+                            <button id="rank-banner"></button>
                             <br>
                             <br>
                         </div>
