--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title id="title-details">CelebBattles - details</title>
+    <title>CelebBattles</title>
     <link rel="icon" type="image/png" href="tournaments/favicon.png" />
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -28,8 +28,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,9 +36,11 @@
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo">
                 <h1 class="text-light"><a href="https://celebbattles.github.io/"><span>CelebBattles </span></a></h1>
+
                 <!-- Uncomment below if you prefer to use an image logo -->
                 <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
             </div>
+
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
@@ -67,68 +67,27 @@
         <section class="breadcrumbs">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2 id="celeb-name"></h2>
+                    <h2>Privacy Policy</h2>
                 </div>
             </div>
+
         </section>
         <section class="team">
             <div class="container">
-                <div class=" row">
-                    <div class="col-sm">
-                        <img id="celeb-img" class="img-fluid details-image" width="60%" style="margin: auto; display: block; border-radius: 2%;">
-                        <div style="text-align: center;">
-                            <br>
-                            <br>
-                            <button id="rank-banner"></button>
-                            <br>
-                            <br>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <table class="table-responsive info-table">
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Rank</td>
-                                <td class="info-table-d" id="rank"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Highest rank</td>
-                                <td class="info-table-d" id="h-rank"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Rating</td>
-                                <td class="info-table-d" id="rat"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Rating deviation</td>
-                                <td class="info-table-d" id="dev"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Number of battles played</td>
-                                <td class="info-table-d" id="num"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Average opponent rating</td>
-                                <td class="info-table-d" id="oppo"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Win percentage</td>
-                                <td class="info-table-d" id="winPer"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Most frequent opponent</td>
-                                <td class="info-table-d" id="freq-oppo"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Best score against</td>
-                                <td class="info-table-d" id="best-score"></td>
-                            </tr>
-                            <tr class="info-table-r">
-                                <td class="info-table-dl">Worst score against</td>
-                                <td class="info-table-d" id="worst-score"></td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
+                <p>This privacy policy applies to <a href="https://celebbattles.github.io" style="color: aqua;">https://celebbattles.github.io</a>.</p>
+
+                <p>We respect the privacy of our visitors. We collect only such personal information as is needed for the site management and analysis of trends.</p>
+
+                <hr>
+
+                <h5 style="text-transform: capitalize;">Google Analytics</h5>
+                <p>We use “Google Analytics” to collect information about use of this site. Google Analytics collects information such as how often users visit this site, what pages they visit when they do so, and what other sites they used prior to coming to this site. We use the information we get from Google Analytics only to improve this site. Google Analytics collects only the IP address assigned to you on the date you visit this site, rather than your name or other identifying information. We do not combine the information collected through the use of Google Analytics with personally identifiable information. Although Google Analytics plants a permanent cookie on your web browser to identify you as a unique user the next time you visit this site, the cookie cannot be used by anyone but Google. Google’s ability to use and share information collected by Google Analytics about your visits to this site is restricted by the <a href="https://marketingplatform.google.com/about/analytics/terms/us/" style="color: aqua;">Google Analytics Terms of Use</a> and the <a href="https://policies.google.com/privacy?hl=en-US" style="color: aqua;">Google Privacy Policy</a>. You can prevent Google Analytics from recognizing you on return visits to this site by disabling cookies on your browser.</p>
+
+                <hr>
+
+                <h5 style="text-transform: capitalize;">Github Pages</h5>
+                <p>Please note that the website is hosted on Github pages and GitHub may collect User Personal Information from visitors to the website, including logs of visitor IP addresses, to comply with legal obligations, and to maintain the security and integrity of the Website and the Service.</p>
+            </div>
             </div>
         </section>
     </main>
