--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
         <h1 class="text-light"><a href="https://celebbattles.github.io/"><span>CelebBattles </span></a></h1>
+
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
+
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
@@ -68,6 +70,7 @@
           <h2>Top Celebs</h2>
         </div>
       </div>
+
     </section>
     <section class="team">
       <div class="container">
@@ -79,7 +82,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>CelebBattles</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>CelebBattles</span></strong>. All Rights Reserved. <a href="https://celebbattles.github.io/privacy" style="color: #a2cce3;">Privacy Policy</a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
