--- a/privacy.html
+++ b/privacy.html
@@ -73,7 +73,7 @@
 
         </section>
         <section class="team">
-            <div class="container" style="width: 55%; text-align: justify;">
+            <div class="container privacy">
                 <p>This privacy policy applies to <a href="https://celebbattles.github.io" style="color: aqua;">https://celebbattles.github.io</a>.</p>
 
                 <p>We respect the privacy of our visitors. We collect only such personal information as is needed for the site management and analysis of trends.</p>
