--- a/privacy.html
+++ b/privacy.html
@@ -68,6 +68,10 @@
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center">
                     <h2>Privacy Policy</h2>
+                    <div>
+                        <input id="search" class="search-bar" autocomplete="off" placeholder="Search">
+                        <ul id="result" class="search-list"></ul>
+                    </div>
                 </div>
             </div>
 
