--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
           <h2>Top Celebs</h2>
+          <div>
+            <input id="search" class="search-bar" autocomplete="off" placeholder="Search">
+            <ul id="result" class="search-list"></ul>
+          </div>
         </div>
       </div>
 
