--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -252,22 +252,22 @@
                         <div class="round-details">Semifinals 1 <br /></div>
                         <ul class="matchup championship">
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pda9u2/hottest_underrated_celeb_semifinal_1_kaley_cuoco/" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pda9u2/hottest_underrated_celeb_semifinal_1_kaley_cuoco/" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pda9u2/hottest_underrated_celeb_semifinal_1_kaley_cuoco/" target="_blank">Minka Kelly<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="final current">
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Yvonne Strahovski<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pfryz7/hottest_underrated_celeb_semifinal_2_yvonne/" target="_blank">Alison Brie<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/pfryz7/hottest_underrated_celeb_semifinal_2_yvonne/" target="_blank">Yvonne Strahovski<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
