change highest to best

--- a/details.html
+++ b/details.html
@@ -95,7 +95,7 @@
                                 <td class="info-table-d" id="rank"></td>
                             </tr>
                             <tr class="info-table-r">
-                                <td class="info-table-dl">Highest rank</td>
+                                <td class="info-table-dl">Best rank</td>
                                 <td class="info-table-d" id="h-rank"></td>
                             </tr>
                             <tr class="info-table-r">
