change highest to best

--- a/compare.html
+++ b/compare.html
@@ -106,7 +106,7 @@
                             </tr>
                             <tr class="h2h-table-row">
                                 <td class="h2h-td-l" id="h2h-celeb-1-hrank"></td>
-                                <td>Highest Rank</td>
+                                <td>Best Rank</td>
                                 <td class="h2h-td-r" id="h2h-celeb-2-hrank"></td>
                             </tr>
                             <tr class="h2h-table-row">
