--- a/leaderboard.html
+++ b/leaderboard.html
@@ -81,6 +81,7 @@
     </section>
     <section class="team leaderboard-team">
       <div class="container">
+        <img src="assets/img/Ajux_loader.gif" class="loading">
         <div id="leaderboard-holder" class="row">
           <table id="leaderboard" class="table table-dark leaderboard">
             <thead>
