--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -52,6 +52,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="active" href="https://celebbattles.github.io/">Home</a></li>
+                    <li><a class="active" href="https://celebbattles.github.io/leaderboard">Leaderboard</a></li>
                     <li><a class="active" href="https://reddit.com/r/celebbattles">Reddit</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Tournaments</span> <i class="bi bi-chevron-down"></i></a>
