add last updated

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -83,6 +83,7 @@
       <div class="container">
         <img src="assets/img/Ajux_loader.gif" class="loading">
         <div id="leaderboard-holder" class="row">
+          <p id="lastupdated"></p>
           <table id="leaderboard" class="table table-dark leaderboard">
             <thead>
               <th>Rank</th>
